--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <<head>
+    <head>
        <title>my WebPage !</title>
      </head>
-     
+
        <body>
          Hello, world!
          Hello, again!
